Includes photo upload with Casein and Paperclip

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,8 @@
 // @import "bootstrap-sprockets";
 // @import "bootstrap";
 
+@import "font-awesome";
+
 $border: #E9E9E9;
 $conexusblue: #00AFe8;
 $conexusgreen: #33CC00;
