--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -14,7 +14,7 @@
 <section id="contact-headline">
   <h1 id="page_title">Conexus Technology</h1>
   <p>1200 E Morehead St., Suite 275 </p>
-  <p>Charlotte, NC 28204 | phone: 704-000-000</p>
+  <p>Charlotte, NC 28204 | phone: <a href="tel:704-336-9226">704-336-9226</a></p>
 </section>
 
 <section class="contact-wrap">
