--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -38,7 +38,8 @@
 
     		<div class="card radius shadowDepth1">
     			<div class="card__image border-tlr-radius">
-    			     <img src="http://lorempixel.com/400/200/sports/" alt="image" class="border-tlr-radius">
+            <%= image_tag(blog.hero(:small), class: "border-tlr-radius")%>
+    			     <!-- <img src="#{blog.hero}" alt="image" class="border-tlr-radius"> -->
           </div>
 
     			<div class="card__content card__padding">
