Added animations to home page using Animate and Wow

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -25,3 +25,8 @@ margin: 10px 0;
 .separator.transparent {
     background-color: transparent;
 }
+
+
+#home-contact-section{
+  -webkit-animation-duration: 1.5s;
+}
