--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -39,11 +39,10 @@
     		<div class="card radius shadowDepth1">
     			<div class="card__image border-tlr-radius">
             <%= image_tag(blog.hero(:small), class: "border-tlr-radius")%>
-    			     <!-- <img src="#{blog.hero}" alt="image" class="border-tlr-radius"> -->
           </div>
 
     			<div class="card__content card__padding">
-                    <div class="card__share">
+                    <!-- <div class="card__share">
 
                         <div class="card__social">
                             <a class="share-icon facebook" href="#"><span class="fa fa-facebook"></span></a>
@@ -52,7 +51,7 @@
                         </div>
 
                         <a id="share" class="share-toggle share-icon" href="#"></a>
-                    </div>
+                    </div> -->
 
     				<div class="card__meta">
     					<a href="#"><%= blog.category  %></a>
