--- a/app/views/welcome/_masthead.html.erb
+++ b/app/views/welcome/_masthead.html.erb
@@ -1,9 +1,9 @@
 <section id="image-static">
     <span class="overlay-bg"></span>
-    <div id="home-masthead"class="fullimage-container titlize">  
+    <div id="home-masthead"class="fullimage-container titlize">
         <div class="container pagize">
             <div class="row">
-                <div class="col-md-12 textalignleft">
+                <div class="col-md-12 textalignleft animated fadeInRight">
                       <h2>Connecting People Through Technology</h2>
                 </div>
             </div>
