--- a/app/views/welcome/_story.html.erb
+++ b/app/views/welcome/_story.html.erb
@@ -5,8 +5,8 @@
               <div class="col-md-12">
                   <div class="row">
                       <div class="col-md-12 margin-60">
-                          <div class="text-block textalignleft about-us fade_in animate">
-                          <h2 class="textaligncenter conexusblue">What is Conexus Technology?</h2>
+                          <div class="text-block textalignleft about-us">
+                          <h2 class="textaligncenter conexusblue wow slideInLeft">What is Conexus Technology?</h2>
                           <p>
                             Conexus Technology is a start-up based in Charlotte, NC that specializes in creating environments where your customers can experience content in new ways. Through immersive experiences, we use technology to integrate your customers into the real-time creation of brand focused content.
                           </p>
@@ -19,14 +19,14 @@
 
                   <div class="row">
                       <div class="col-md-6">
-                          <div class="text-block textalignleft fade_in animate">
+                          <div class="text-block textalignleft wow slideInLeft">
                           <h2 class="textaligncenter">A New Retail Experience</h2>
                           <p>With shopping research showing that 90% of shoppers consult their mobile device and have their mobile device in hand while shopping, we are poised to deliver context based, <%=link_to "experiential content", capabilities_experiential_content_path %>, every time customers enter your store.</p>
                           </div>
 
                       </div>
                       <div class="col-md-6">
-                          <div class="text-block textalignleft">
+                          <div class="text-block textalignleft wow slideInRight">
                           <h2 class="textaligncenter">Staying Connected</h2>
                           <p>We specialize in finding ways to connect devices, social interactions and content to the real world through innovative uses of web/mobile app’s and API’s.</p>
                           </div>
