--- a/app/views/welcome/_contact.html.erb
+++ b/app/views/welcome/_contact.html.erb
@@ -3,12 +3,12 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="row">
-					<div id="home-contact-section" class="col-md-12">
+					<div id="home-contact-section" class="col-md-12 wow slideInUp">
 						<h3>CONTACT US</h3>
 						<h2>Conexus Technology</h2>
 						<p>1200 E Morehead St. Charlotte, NC 28204</p>
 					<div id="contact-email-icon">
-						<p> <%= link_to(image_tag("icon-email.png", :alt => "Email Us", :title => "Email Us"), root_path) %> Email Us </p>
+						<p> <%= link_to(image_tag("icon-email.png", :alt => "Email Us", :title => "Email Us"), "mailto:info@conexus-tech.com") %> <%= link_to "Email Us", "mailto:info@conexus-tech.com" %></p>
 					</div>
 					</div>
 				</div>
