Moving over to Heroku

--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -1270,7 +1270,7 @@ header.sticky-header.nav-small #menu ul .sub-menu li a {
 }
 
 #home-masthead {
-    background: url('conexus_attmichave.jpg') center center no-repeat;
+    background: url('<%= asset_path("conexus_attmichave.jpg")%>') center center no-repeat;
     background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1280,7 +1280,7 @@ header.sticky-header.nav-small #menu ul .sub-menu li a {
 }
 
 #about-header{
-    background: url('about-us_header.jpg') center center no-repeat;
+    background: url('<%= asset_path("about-us_header.jpg")%>') center center no-repeat;
     background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1289,7 +1289,7 @@ header.sticky-header.nav-small #menu ul .sub-menu li a {
 }
 
 #socialinteraction-header{
-    background: url('header-socialinteraction.jpg') center center no-repeat;
+    background: url('<%= asset_path("header-socialinteraction.jpg")%>') center center no-repeat;
     background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1298,7 +1298,7 @@ header.sticky-header.nav-small #menu ul .sub-menu li a {
 }
 
 #immersive-header{
-    background: url('header-immersive.jpg') center center no-repeat;
+    background: url('<%= asset_path("header-immersive.jpg")%>') center center no-repeat;
     background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1307,7 +1307,7 @@ header.sticky-header.nav-small #menu ul .sub-menu li a {
 }
 
 #controlsystems-header{
-    background: url('header-controlsys.jpg') center center no-repeat;
+    background: url('<%= asset_path("header-controlsys.jpg")%>') center center no-repeat;
     background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1316,7 +1316,7 @@ header.sticky-header.nav-small #menu ul .sub-menu li a {
 }
 
 #experiential-header{
-    background: url('header-experiential.jpg') center center no-repeat;
+    background: url('<%= asset_path("header-experiential.jpg")%>') center center no-repeat;
     background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1329,11 +1329,11 @@ header.sticky-header.nav-small #menu ul .sub-menu li a {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('ecology.jpg'); padding-top: 200px; padding-bottom: 200px;
+    background-image: url('<%= asset_path("ecology.jpg")%>'); padding-top: 200px; padding-bottom: 200px;
 }
 
 #contact-header{
-    background: url('header_contact.jpg') center center no-repeat;
+    background: url('<%= asset_path("header_contact.jpg")%>') center center no-repeat;
     background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1342,7 +1342,7 @@ header.sticky-header.nav-small #menu ul .sub-menu li a {
 }
 
 #trends-header{
-    background: url('header_trends.jpg') center center no-repeat;
+    background: url('<%= asset_path("header_trends.jpg")%>') center center no-repeat;
     background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1363,7 +1363,7 @@ header.sticky-header.nav-small #menu ul .sub-menu li a {
 }
 
 #home-map {
-    background: url('charlotte_map.png') center center no-repeat;
+    background: url('<%= asset_path("charlotte_map.png")%>') center center no-repeat;
     background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
