--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -32,7 +32,7 @@
             		<li><%= link_to "Home", root_path %></li>
 					<li><%= link_to "About", about_path %></li>
 					<li><%= link_to "Experience", experience_path %></li>
-					<li><%= link_to "Blog", "#" %></li>
+					<li><%= link_to "Trends", blogs_path %></li>
 					<li><%= link_to "Contact", contact_path %></li>
                 </ul>
             </div>
