--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col-md-3">
 			<div id="logo">
-				<%= link_to(image_tag("conexus-technology-logo.png", :alt => "Conexus Technology", :title => "Home"), root_path) %>
+				<%= link_to(image_tag("images/conexus-technology-logo.png", :alt => "Conexus Technology", :title => "Home"), root_path) %>
 			</div>
 		</div>
 		<div class="col-md-9">
