--- a/app/views/welcome/_contact.html.erb
+++ b/app/views/welcome/_contact.html.erb
@@ -8,7 +8,7 @@
 						<h2>Conexus Technology</h2>
 						<p>1200 E Morehead St. Charlotte, NC 28204</p>
 					<div id="contact-email-icon">
-						<p> <%= link_to(image_tag("images/icon-email.png", :alt => "Email Us", :title => "Email Us"), "mailto:info@conexus-tech.com") %> <%= link_to "Email Us", "mailto:info@conexus-tech.com" %></p>
+						<p> <%= link_to(image_tag("icon-email.png", :alt => "Email Us", :title => "Email Us"), "mailto:info@conexus-tech.com") %> <%= link_to "Email Us", "mailto:info@conexus-tech.com" %></p>
 					</div>
 					</div>
 				</div>
