Fixed Image Issue - Capabilities Section

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -90,13 +90,13 @@ $highlight: #8bc6db;
 }
 
 .lob-nav ul li.lob-digital i {
-  background-image: url('<%= asset_path("assets/images/icon-digital-activations.png")%>'); }
+  background-image: url(<%= asset_path 'icon-digital-activations.png' %>); }
 .lob-nav ul li.lob-programming i {
-  background-image: url('<%= asset_path("assets/images/icon-programming.png")%>'); }
+  background-image: url(<%= asset_path 'icon-programming.png' %>); }
 .lob-nav ul li.lob-immersive i {
-  background-image: url('<%= asset_path("assets/images/icon_immersive.png")%>'); }
+  background-image: url(<%= asset_path 'icon_immersive.png' %>); }
 .lob-nav ul li.lob-experiential i {
-  background-image: url('<%= asset_path("assets/images/icon_experiential.png")%>'); }
+  background-image: url(<%= asset_path 'icon_experiential.png' %>); }
 
 .lob-nav ul li:hover {
   background: rgba(0, 0, 0, 0.5);
