--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -90,7 +90,8 @@ $highlight: #8bc6db;
 }
 
 .lob-nav ul li.lob-digital i {
-  background-image: url(<%= asset_path 'icon-digital-activations.png' %>); }
+  background-image: url(<%= asset_path 'icon-digital-activations.png' %>);
+}
 .lob-nav ul li.lob-programming i {
   background-image: url(<%= asset_path 'icon-programming.png' %>); }
 .lob-nav ul li.lob-immersive i {
@@ -272,8 +273,8 @@ line-height: 2.5rem;
     .slide-dir.slide-left {
       left: 0;
       background-position: 50% 50%;
-      background-image: url('<%= asset_path("pagination_prev_white.png")%>'); }
+      background-image: url(<%= asset_path "pagination_prev_white.png" %>); }
     .slide-dir.slide-right {
       right: 0;
       background-position: 50% 50%;
-      background-image: url('<%= asset_path("pagination_next_white.png")%>'); } }
+      background-image: url(<%= asset_path "pagination_next_white.png" %>); } }
