--- a/app/assets/stylesheets/style.scss.erb
+++ b/app/assets/stylesheets/style.scss.erb
@@ -965,7 +965,7 @@ header.sticky-header.nav-small #menu ul .sub-menu li a {
     margin: -6px 0 0 0;
     width: 16px;
     height: 16px;
-    background: url('menu-mobile.png') 0 0 no-repeat;
+    background: url(<%= asset_path 'menu-mobile.png' %>) 0 0 no-repeat;
     -webkit-transition: -webkit-transform 250ms ease-out 0s;
     -moz-transition: -moz-transform 250ms ease-out 0s;
     -o-transition: -o-transform 250ms ease-out 0s;
