--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
 
 <!--  Start of Footer Navigation-->
 
-            	<div class="col-md-4">
+            	<div id="links" class="col-md-4">
                     <div><h3>Links</h3></div>
                         <%= link_to "Home", root_path %>
 													<div class="separator  transparent center  " style="margin-top: 3px;margin-bottom: 9px;"></div>
@@ -35,7 +35,7 @@
                     <div id="social-widget-2" class="widget social_widget">
                     	<h3>Connect with Us</h3>
 
-                    	<a href="" target="_blank"><i class="font-icon-social-facebook"></i></a>
+                    	<!-- <a href="" target="_blank"><i class="font-icon-social-facebook"></i></a> -->
                     	<a href="" target="_blank"><i class="font-icon-social-linkedin"></i></a>
                     	<a href="" target="_blank"><i class="font-icon-social-twitter"></i></a>
                     	<a href="" target="_blank"><i class="font-icon-social-instagram"></i></a>
