--- a/app/views/projects/_allprojects.html.erb
+++ b/app/views/projects/_allprojects.html.erb
@@ -1,23 +1,49 @@
-<div class="element element-in">
-  <%= link_to (image_tag "projects/features_digitallife16_main.jpg"), projects_att_digitallife16_path%>
-  <p class="feature-headline">AT&T - Digital Life 2016</p>
+<div class="element element-in project-item-overlay">
+<figure>
+  <%= image_tag "projects/features_digitallife16_main.jpg" %>
+
+<figcaption>
+  <%= link_to "<h1 class='feature-headline'>AT&T - Digital Life 2016</h1>".html_safe ,  projects_att_digitallife16_path %>
+</figcaption>
+</figure>
 </div>
 
-<div class="element element-in">
-  <%= link_to (image_tag "projects/feature_vangogh1_main.jpg"), projects_att_vangogh_path%>
-  <p class="feature-headline">AT&T - Van Gogh</p>
+<div class="element element-in project-item-overlay">
+  <figure>
+    <%= image_tag "projects/feature_vangogh1_main.jpg" %>
+
+  <figcaption>
+    <%= link_to "<h1 class='feature-headline'>AT&T - Van Gogh</h1>".html_safe ,  projects_att_vangogh_path %>
+  </figcaption>
+  </figure>
 </div>
 
-<div class="element element-in">
-  <%= link_to (image_tag "projects/features_projection_main.jpg"), projects_att_fwchicago15_path%>
-  <p class="feature-headline">AT&T - Fashion Week Chicago 2015</p>
+<div class="element element-in project-item-overlay">
+  <figure>
+    <%= image_tag "projects/features_projection_main.jpg" %>
+
+  <figcaption>
+    <%= link_to "<h1 class='feature-headline'>AT&T - Fashion Week Chicago 2015</h1>".html_safe ,  projects_att_fwchicago15_path %>
+  </figcaption>
+  </figure>
 </div>
 
-<div class="element element-in">
-  <%= link_to (image_tag "projects/features_holiday_main.jpg"), projects_att_holiday15_path%>
-  <p class="feature-headline">AT&T - Happy Holidays 2015</p>
+<div class="element element-in project-item-overlay">
+  <figure>
+    <%= image_tag "projects/features_holiday_main.jpg" %>
+
+  <figcaption>
+    <%= link_to "<h1 class='feature-headline'>AT&T - Magical Gifts</h1>".html_safe ,  projects_att_holiday15_path %>
+  </figcaption>
+  </figure>
 </div>
-<div class="element element-in">
-  <%= link_to (image_tag "projects/features_digitallife14_main.jpg"), projects_att_digitallife14_path%>
-  <p class="feature-headline">AT&T - Digital Life 2014</p>
+
+<div class="element element-in project-item-overlay">
+  <figure>
+    <%= image_tag "projects/features_digitallife14_main.jpg" %>
+
+  <figcaption>
+    <%= link_to "<h1 class='feature-headline'>AT&T - Digital Life 2014</h1>".html_safe ,  projects_att_digitallife14_path %>
+  </figcaption>
+  </figure>
 </div>
