--- a/app/views/projects/digitallife16.html.erb
+++ b/app/views/projects/digitallife16.html.erb
@@ -10,9 +10,9 @@
                           </div>
                           <div id="owl-slider" class="owl-carousel">
 
-                            <div class="owl-item"><img src="http://placehold.it/1170x500/42bdc2/FFFFFF"></div>
+                            <div class="owl-item"><%= image_tag "projects/digitallife16/owl_digitallife16_1.jpg" %></div>
 
-                            <div class="owl-item"><img src="http://placehold.it/1170x500/42bdc2/FFFFFF"></div>
+                            <div class="owl-item"><%= image_tag "projects/digitallife16/owl_digitallife16_2.jpg" %></div>
                           </div>
 
                             <div class="text-block textaligncenter slider-info">
