--- a/app/views/projects/projects.html.erb
+++ b/app/views/projects/projects.html.erb
@@ -1,6 +1,6 @@
 <section id="image-static">
         <span class="overlay-bg"></span>
-        <div class="fullimage-container titlize" id="contact-header">
+        <div class="fullimage-container titlize" id="projects-header">
                     <div class="container pagize">
             	<div class="row">
                 	<div class="col-md-12 textalignleft">
@@ -11,6 +11,6 @@
         </div>
 </section>
 
-<div class="list">
+<div id="projects-list" class="list">
   <%= render "projects/allprojects" %>
 </div>
