Mobile Menu and About Page Width issue fixed

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -69,11 +69,11 @@ line-height: 2.5rem;
   margin-bottom: 0.5em
 }
 
-#capabilities .list {
+#capabilities .capabilities-list {
   overflow: auto
 }
 
-#capabilities .list .capability {
+#capabilities .capabilities-list .capability {
   text-align: center;
   color: #999;
   float: left;
@@ -83,23 +83,23 @@ line-height: 2.5rem;
   margin: 0;
 }
 
-#capabilities .list .capability a {
+#capabilities .capabilities-list .capability a {
   display: block;
   width: 90%;
   margin: 0 auto;
   padding: 15px;
 }
 
-#capabilities .list .capability a:hover {
+#capabilities .capabilities-list .capability a:hover {
   color: white;
   background-color: $conexusblue !important;
 }
 
-#capabilities .list.capability-count-2 .capability {
+#capabilities .capabilities-list.capability-count-2 .capability {
   width: 50%;
 }
 
-#capabilities .list.capability-count-1 .capability {
+#capabilities .capabilities-list.capability-count-1 .capability {
   width: 100%;
 }
 
