--- a/app/assets/stylesheets/style.scss.erb
+++ b/app/assets/stylesheets/style.scss.erb
@@ -49,6 +49,7 @@
 
 #links {
 text-align: center;
+margin-bottom: 3rem;
   a{
     color: $white;
   }
@@ -8313,10 +8314,10 @@ and (max-device-width : 480px) {
         display: inline-block;
     }
 
-    .menu-nav .menu-icon {
-        background-image: url('menu_btn@2x.png');
-        background-size: 16px 32px;
-    }
+    // .menu-nav .menu-icon {
+    //     background-image: url(<%= asset_path 'menu_btn@2x.png' %>);
+    //     background-size: 32px 32px;
+    // }
 
     .bootstrap-select.btn-group .custom-select .plus-select {
         background-image: url(_include/img/plus_select_@2x.png);
