--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,13 @@
 <section id="image-static">
         <span class="overlay-bg"></span>
         <div class="fullimage-container titlize" id="about-header">
-                    <div class="container pagize">
+            <div class="container pagize">
             	<div class="row">
                 	<div class="col-md-12 textalignleft">
                         <h2>About Conexus</h2>
-                    </div>
-            	</div>
+                  </div>
+              </div>
             </div>
-
         </div>
 </section>
 
@@ -39,7 +38,6 @@
                         <h1 style="color: #ffffff; font-size: 48px;" class="default">The Ecology of Technology</h1>
                         <p>The study of the way people interact with technology.</p>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -64,7 +62,7 @@
                                 <h2>Our Capabilities</h2>
 
                                 <div id="capabilities" class="clearfix">
-                                    <div class="list">
+                                    <div class="capabilities-list">
                                       <div class="capability">
                                           <%= link_to "Experiential Content", capabilities_experiential_content_path %>
                                       </div>
