Created animations for about page and projects

--- a/app/views/projects/_allprojects.html.erb
+++ b/app/views/projects/_allprojects.html.erb
@@ -1,4 +1,4 @@
-<div class="element element-in project-item-overlay">
+<div class="element element-in project-item-overlay wow fadeInUp">
 <figure>
   <%= image_tag "projects/features_digitallife16_main.jpg" %>
 
@@ -8,7 +8,7 @@
 </figure>
 </div>
 
-<div class="element element-in project-item-overlay">
+<div class="element element-in project-item-overlay wow fadeInUp">
   <figure>
     <%= image_tag "projects/feature_vangogh1_main.jpg" %>
 
@@ -18,7 +18,7 @@
   </figure>
 </div>
 
-<div class="element element-in project-item-overlay">
+<div class="element element-in project-item-overlay wow fadeInUp">
   <figure>
     <%= image_tag "projects/features_projection_main.jpg" %>
 
@@ -28,7 +28,7 @@
   </figure>
 </div>
 
-<div class="element element-in project-item-overlay">
+<div class="element element-in project-item-overlay wow fadeInUp">
   <figure>
     <%= image_tag "projects/features_holiday_main.jpg" %>
 
@@ -38,7 +38,7 @@
   </figure>
 </div>
 
-<div class="element element-in project-item-overlay">
+<div class="element element-in project-item-overlay wow fadeInUp">
   <figure>
     <%= image_tag "projects/features_digitallife14_main.jpg" %>
 
