--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -36,9 +36,9 @@
                     	<h3>Connect with Us</h3>
 
                     	<!-- <a href="" target="_blank"><i class="font-icon-social-facebook"></i></a> -->
-                    	<a href="" target="_blank"><i class="font-icon-social-linkedin"></i></a>
-                    	<a href="" target="_blank"><i class="font-icon-social-twitter"></i></a>
-                    	<a href="" target="_blank"><i class="font-icon-social-instagram"></i></a>
+                    	<a href="https://www.linkedin.com/company/15220707" target="_blank"><i class="font-icon-social-linkedin"></i></a>
+                    	<a href="https://twitter.com/conexustech" target="_blank"><i class="font-icon-social-twitter"></i></a>
+                    	<a href="https://www.instagram.com/conexustech/" target="_blank"><i class="font-icon-social-instagram"></i></a>
 
                     </div>
                 </div>
