--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -18,7 +18,7 @@
                 <div class="col-md-12">
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="text-block textaligncenter about-us">
+                            <div class="text-block textaligncenter about-us animated slideInUp">
                                 <h2>Behind the Name</h2>
                                     <p>Conexus means connected in Latin and also is a play on words, "Connects Us". This really describes how we see ourselves and what we do for our clients. We connect people with people, connect business with the space they occupy and help businesses connect with their customers, either in the same room or over great distances all through technology.</p>
                             </div>
@@ -49,7 +49,7 @@
                 <div class="col-md-12">
                     <div class="row">
                         <div class="col-md-12">
-                            <div id="what-we-do"class="text-block about-us textaligncenter">
+                            <div id="what-we-do"class="text-block about-us textaligncenter wow slideInUp">
                                 <h2>What We Do</h2>
                                 <p>After understanding who you are and how you do business we show our clients which of today’s technologies will provide the most value to your business.</p>
                             </div>
@@ -58,7 +58,7 @@
 
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="text-block about-us textaligncenter">
+                            <div class="text-block about-us textaligncenter wow slideInUp">
                                 <h2>Our Capabilities</h2>
 
                                 <div id="capabilities" class="clearfix">
